--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3'
 
 services:
+ api:
+      
+  build:
+      dockerfile: Dockerfile
+      context: .
+      depends_on: 
+            - db
+      environment: 
+            DATABASE_URL: postgres://user:password@postgres:5432/db
+            NODE_ENV: development
+            PORT: 3000
+            ports:
+            - "8080:3000"
   db:
     image: postgres:latest
     restart: always
